# ml-coursera-python-assignments

./: pyproject.toml
Exercise6/: exercise6.ipynb  test.ipynb
Exercise7/: exercise7.ipynb
Exercise8/: exercise8.ipynb
