[tool.poetry]
name = "ml-coursera-python-assignments"
version = "0.1.0"
description = ""
authors = ["ralf-t <tabo.ralfmartin@ue.edu.ph>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
notebook = "^6.4.12"
jupyter = "^1.0.0"
jupyter-client = "^7.3.4"
Pillow = "^9.1.1"
imageio = "^2.19.3"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
